--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -5,6 +5,6 @@
   text-align: center;
   height: 5rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
